# project_part1

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Command.h  ConditionCommand.cpp  ConditionCommand.h  Data.cpp  Data.h  DataReaderServ.cpp  DataReaderServ.h  DataReaderServer.cpp  DataReaderServer.h  DataWriterServer.cpp  DataWriterServer.h  Div.cpp  Div.h  EnterCCommand.cpp  EnterCCommand.h  EqualCommand.cpp  EqualCommand.h  Expression.h  ExpressionCommand.cpp  ExpressionCommand.h  Interpeter.cpp  Interpeter.h  LoopCommand.cpp  LoopCommand.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Neg.cpp  Neg.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  Plus.cpp  Plus.h  PrintCommand.cpp  (+20 more)
